# sma-ng

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .local.sample  .markdownlint.json  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  NZBGetPostProcess.py  README.md  SABPostProcess.py  coverage.xml  daemon.py  delugePostProcess.py  docker-compose.yml  docker-entrypoint.sh  ini_merge.py  manual.py  mise.toml  postRadarr.py  postRadarr.sh  postSickbeard.py  postSonarr.py  pyproject.toml  pyrightconfig.json  qBittorrentPostProcess.py  rename.py  sma-webhook.sh  uTorrentPostProcess.py  update.py  yaml_merge.py
.claude/: settings.json
.claude/agents/: code-reviewer.md  config-schema-reviewer.md  documentation-writer.md  explorer.md  ffmpeg-args-auditor.md  implementer.md  test-writer.md
.claude/commands/: blueprint.md  code-review.md  codecs.md  commit.md  convert.md  daemon.md  discovery.md  docs.md  errors.md  implement.md  preview.md  refactor.md  research.md  test.md
.codex/commands/: errors.md
.github/workflows/: ci.yml  docker.yml  release.yml
autoprocess/: _media_server.py  autoscan.py  emby.py  jellyfin.py  plex.py  radarr.py  sonarr.py
config/: __init__.py  custom.py  logging.ini
converter/: __init__.py  avcodecs.py  ffmpeg.py  formats.py
docker/: .env.example  Dockerfile  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh
docs/: README.md  cluster-operations.md  configuration.md  daemon.md  deployment.md  docker-compose-quickstart.md  environment-architecture.md  getting-started.md  hardware-acceleration.md  integrations.md  library-audit.md  metrics.md  migration.md  multi-instance-deployment.md  openapi.yaml  test-coverage.md  troubleshooting.md
docs/brainstorming/: 2026-04-24-yaml-config-migration.md  2026-04-25-cluster-mode.md  2026-04-26-config-restructure.md  2026-04-27-logging-refactor.md  2026-05-10-qsv-transcoding-refactor.md  2026-05-16-qsv-python-quality-docker-pipeline.md  2026-05-16-rq-profile-megusta-tightening.md  2026-05-24-weighted-concurrency-budget.md
docs/prps/: cluster-metrics.md  cluster-mode-phase2.md  cluster-mode.md  config-file-watcher.md  config-restructure.md  library-audit.md  metrics-expansion.md  openvino-analyzer-implementation.md  output-storage-management.md  per-profile-priority-weight.md  qsv-hevc-icq-encoding.md  qsv-pipeline-phase1-foundation.md  qsv-vaapi-fallback.md  remove-autoprocess-ini-mentions.md  remove-update-py-ini-fallback.md  test-coverage-90.md  weighted-concurrency-budget.md
docs/tasks/: cluster-metrics.md  cluster-mode-phase2.md  cluster-mode.md  config-file-watcher.md  config-restructure.md  library-audit.md  metrics-expansion.md  openvino-analyzer-implementation.md  per-profile-priority-weight.md  qsv-hevc-icq-encoding.md  qsv-pipeline-phase1-foundation.md  qsv-vaapi-fallback.md  remove-autoprocess-ini-mentions.md  remove-update-py-ini-fallback.md  test-coverage-90.md
docs/templates/: brainstorming_session_template.md  technical-task-template.md
post_process/: NZBGetPostProcess.sh  SABPostProcess.sh  delugePostProcess.sh  nzbget_post_process.sh  postSonarr.sh  post_process.md  qBittorrentPostProcess.sh  qbittorrent_post_process.sh  sabnzbd_post_process.sh  uTorrentPostProcess.sh  utorrent_post_process.sh
resources/: admin.html  analyzer.py  config_loader.py  config_schema.py  custom.py  dashboard.html  docs.html  extensions.py  lang.py  log.py  mediamanager.py  mediaprocessor.py  metadata.py  metrics.html  naming.py  openvino_analyzer.py  postprocess.py  readsettings.py  rename_util.py  subtitles.py  webhook_client.py  yamlconfig.py
resources/daemon/: __init__.py  config.py  constants.py  context.py  db.py  db_log_handler.py  docs_ui.py  handler.py  log_archiver.py  metrics_prom.py  routes.py  server.py  storage.py  threads.py  webhook_parsing.py  worker.py
resources/library_audit/: __init__.py  engine.py  enumerator.py  kinds.py  probes.py  recycler.py  tag_reader.py
resources/processor/: failures.py
scripts/: bump-version.py  check-coverage-floor.py  check_python_encodings.py  detect-gpu.sh  docker-run.sh  docker_smoke_imports.py  generate-configs.sh  generate_sma_ng_sample.py  i915-tune.sh  ini_audit.py  lint-logging.py  local-config.py  local-config.sh  local-section-json.py  pause-transcodes.sh  plexmatch.py  populate-service-configs.py  prepare_models.py  probe-hw.py  services-json.py  show-config.py  sma-scan.sh  validate-config.py
setup/: .local.ini.sample  .local.yml.sample  autoProcess.ini.sample  autoProcess.ini.sample-lq  daemon.env.sample  daemon.json.sample  install-docker-target.sh  local.yml.sample  requirements-deluge.txt  requirements-dev.txt  requirements-openvino.txt  requirements-qbittorrent.txt  requirements.txt  sma-daemon-start.sh  sma-daemon.service  sma-healthcheck.sh  sma-ng-docker-aliases.sh  sma-ng.yml.sample
setup/post_process/: deluge_post_process.sh  emby.py  iTunes.py  jellyfin.py  nzbget_post_process.sh  plex.py  qbittorrent_post_process.sh  sample.py  (+4 more)
tests/: conftest.py  test_analyzer.py  test_attempt_ladder.py  test_autoscan.py  test_avcodecs.py  test_cluster.py  test_config.py  test_config_loader.py  test_config_sample.py  test_config_schema.py  test_config_watcher.py  test_converter.py  test_converter_extended.py  test_custom_hooks.py  test_daemon.py  test_daemon_entry.py  test_deploy_tasks.py  test_docker.py  test_emby_jellyfin.py  test_entrypoint.py  test_failure_categorization.py  test_failures.py  test_fallback_policy.py  test_ffmpeg.py  test_ffmpeg_extended.py  test_ffmpeg_parse_extra.py  test_formats.py  test_handler.py  test_ini_audit.py  test_ini_merge.py  test_ini_merge_import.py  test_integration_scripts.py  test_lang.py  test_library_audit_engine.py  test_library_audit_enumerator.py  test_library_audit_handler.py  test_library_audit_recycler.py  test_library_audit_tag_reader.py  test_library_audit_threads.py  test_lint_logging.py  (+34 more)
triggers/: README.md
(+125 files in other folders)
