[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sma-ng"
version = "1.6.21"
description = "SMA-NG: Next-generation automated media conversion, tagging, and integration pipeline"
readme = "docs/README.md"
license = { file = "license.md" }
requires-python = ">=3.12"
authors = [{ name = "mdhiggins" }]
keywords = [
  "ffmpeg",
  "media",
  "conversion",
  "mp4",
  "sonarr",
  "radarr",
  "plex",
  "sma-ng",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
  "requests>=2.32,<3",
  "idna>=3.11,<4",
  "requests-cache>=1.3,<2",
  "babelfish>=0.6.1,<1",
  "tmdbsimple>=2.9,<3",
  "mutagen>=1.47,<2",
  "guessit>=3.8,<4",
  "subliminal>=2.6,<3",
  "python-dateutil>=2.9,<3",
  "stevedore>=5.7,<6",
  "qtfaststart>=1.8,<2",
  "cleanit>=0.4.9,<1",
  "plexapi>=4.18,<5",
]

[project.optional-dependencies]
openvino = ["openvino>=2025.0,<2027"]
qbittorrent = ["python-qbittorrent>=0.4.3,<1"]
deluge = ["deluge-client>=1.10,<2", "gevent>=25.9,<26"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "openapi-spec-validator>=0.7",
]

[project.scripts]
sma-ng = "manual:main"
sma-ng-daemon = "daemon:main"

[project.urls]
Homepage = "https://github.com/newdave/sma-ng"
Documentation = "https://github.com/newdave/sma-ng/wiki"
Repository = "https://github.com/newdave/sma-ng"
Issues = "https://github.com/newdave/sma-ng/issues"

[tool.setuptools]
packages = ["resources", "converter", "autoprocess"]

[tool.setuptools.package-data]
"*" = ["*.sample", "*.md"]

[tool.ruff]
target-version = "py312"
line-length = 200
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
  "E501", # line too long (handled by line-length)
  "E722", # bare except (legacy codebase pattern)
  "F841", # local variable assigned but never used
  "E402", # module level import not at top
  "F401", # unused imports (legacy modules with wildcard re-exports)
  "F403", # star imports (legacy pattern in converter/autoprocess modules)
  "F405", # undefined names from star import (consequence of F403)
  "F811", # redefined while unused (intentional overrides in codec classes)
  "F601", # multi-value repeated key literal (legacy config dicts)
  "E741", # ambiguous variable name (l, O, I used in codec/ffmpeg code)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "smoke: end-to-end transcode tests requiring ffmpeg and fixture media (deselect with '-m not smoke')",
]
