[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sma-ng"
version = "3.2.0"
description = "SMA-NG: Next-generation automated media conversion, tagging, and integration pipeline"
readme = "docs/README.md"
license = { file = "license.md" }
requires-python = ">=3.12"
authors = [{ name = "mdhiggins" }]
keywords = [
  "ffmpeg",
  "media",
  "conversion",
  "mp4",
  "sonarr",
  "radarr",
  "plex",
  "sma-ng",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
  "requests>=2.32,<3",
  "idna>=3.11,<4",
  "requests-cache>=1.3,<2",
  "babelfish>=0.6.1,<1",
  "tmdbsimple>=2.9,<3",
  "mutagen>=1.47,<2",
  "guessit>=3.8,<4",
  "subliminal>=2.6,<3",
  "python-dateutil>=2.9,<3",
  "stevedore>=5.7,<6",
  "qtfaststart>=1.8,<2",
  "cleanit>=0.4.9,<1",
  "plexapi>=4.18,<5",
  "pydantic>=2,<3",
  "ruamel.yaml>=0.18,<1",
  "prometheus-client>=0.20,<1",
]

[project.optional-dependencies]
openvino = ["openvino>=2025.0,<2027"]
qbittorrent = ["python-qbittorrent>=0.4.3,<1"]
deluge = ["deluge-client>=1.10,<2", "gevent>=25.9,<26"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "openapi-spec-validator>=0.7",
  "build>=1.2",
  "bandit[toml]>=1.7",
  "pre-commit>=3.7",
]

[project.scripts]
sma-ng = "manual:main"
sma-ng-daemon = "daemon:main"

[project.urls]
Homepage = "https://github.com/newdave/sma-ng"
Documentation = "https://github.com/newdave/sma-ng/wiki"
Repository = "https://github.com/newdave/sma-ng"
Issues = "https://github.com/newdave/sma-ng/issues"

[tool.setuptools]
packages = ["resources", "converter", "autoprocess"]

[tool.setuptools.package-data]
"*" = ["*.sample", "*.md"]

[tool.ruff]
target-version = "py312"
line-length = 200
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
# Phase 1 (T7) of the QSV refactor program: expanded ruleset for security,
# logging, and resource-leak coverage on a subprocess-heavy daemon. Legacy
# F* / E* ignores below pre-date the expansion and stay; per-file ignores
# below restrict the new categories to where they apply cleanly.
select = [
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "W",      # pycodestyle warnings
  "I",      # isort
  "B",      # flake8-bugbear — likely-bug patterns
  "SIM",    # flake8-simplify
  "RUF",    # ruff-specific
  "LOG",    # flake8-logging — wrong logger.exception usage etc.
  "RET",    # flake8-return — redundant returns, inconsistent return types
  "PTH",    # flake8-use-pathlib — os.path → pathlib (info only; many ignores)
  "S",      # flake8-bandit — duplicates Bandit but cheaper in the lint loop
  "PERF",   # Perflint — try/except in tight loops, list/dict overhead
  "PLE",    # pylint errors
  "PLW",    # pylint warnings
  "UP",     # pyupgrade — Python 3.12 idioms
]
ignore = [
  "E501",   # line too long (handled by line-length)
  "E722",   # bare except (legacy codebase pattern)
  "F841",   # local variable assigned but never used
  "E402",   # module level import not at top
  "F401",   # unused imports (legacy modules with wildcard re-exports)
  "F403",   # star imports (legacy pattern in converter/autoprocess modules)
  "F405",   # undefined names from star import (consequence of F403)
  "F811",   # redefined while unused (intentional overrides in codec classes)
  "F601",   # multi-value repeated key literal (legacy config dicts)
  "E741",   # ambiguous variable name (l, O, I used in codec/ffmpeg code)
  # ── Expanded-ruleset global allowlist (T7) ──
  # The codebase pre-dates the broader ruleset; these classes either fire too
  # broadly on legacy code (the wildcard re-exports / codec class hierarchy)
  # or are stylistic rather than load-bearing. Each one is allowlisted with a
  # justification rather than left to drift.
  "B007",   # unused loop variable — frequent in (k, v) iter that only needs one side
  "B008",   # function call in default argument — pydantic Field(default_factory=…) uses this pattern
  "B904",   # raise without `from` — converter/* preserves original-error semantics
  "SIM105", # contextlib.suppress instead of try/except/pass — clearer as-is in many places
  "SIM108", # ternary if-else — codec table construction reads better as if/else
  "SIM117", # nested with — kept for breakpoint-line clarity
  "S101",   # use of assert — pytest tests, and a small number of debug asserts
  "S110",   # try/except/pass — used as bounded-best-effort cleanup paths
  "S404",   # subprocess module — entire daemon is subprocess-based
  "S603",   # subprocess call without shell=False — argv is hardcoded in our wrappers
  "S607",   # partial executable path — `ffmpeg`/`vainfo` resolved at runtime via PATH or config
  "RUF005", # iterable unpacking instead of + — legacy code uses + for list concat
  "RUF012", # mutable class attribute should use ClassVar — codec classes have intentional shared lists
  "RET504", # unnecessary assignment before return — kept for readability in long pipelines
  "RET505", # unnecessary else after return — readable in branching plan() flow
  "PTH100", "PTH103", "PTH107", "PTH109", "PTH110", "PTH111", "PTH112",
  "PTH113", "PTH114", "PTH115", "PTH116", "PTH117", "PTH118", "PTH119",
  "PTH120", "PTH122", "PTH123", "PTH202", "PTH207", "PTH208",
            # pathlib migrations — large, mechanical, defer to a dedicated PR
  "PERF203",# try/except in for loop — used in the converter for per-frame error recovery
  "PERF401",# manual list/dict comp — many places read better as a for-append
  "PLW0603",# global statement — used by signal handlers
  "PLW2901",# loop variable overwritten — intentional in path-walking helpers
  "UP015",  # redundant open mode — readability vs. mechanical bump
  "UP038",  # isinstance with tuple → union (Python 3.10+) — kept for older-style consistency
  "UP031",  # f-strings vs %-format — codebase consistently uses %, not f-strings
  "UP008",  # super(Cls, self) — codec class hierarchy uses this verbose form
  "UP017",  # datetime.timezone.utc → datetime.UTC — broad mechanical change
  "UP045",  # Optional[X] → X | None — broad mechanical change
  "UP030",  # implicit field numbering in format — narrow utility code
  "UP042",  # IntEnum class inheritance — defensive existing pattern
  "UP028",  # yield from generator
  "UP004",  # explicit object inheritance — codec class hierarchy
  "RUF059", # unused tuple unpacking variable — for k, v in d.items() patterns
  "RUF100", # unused noqa — sweep periodically, but not on this PR
  "RUF022", # __all__ sort order — kept stable for diff hygiene
  "RUF019", # unnecessary key in if k in d / d[k] — readable as-is
  "RUF046", # int(x) when x is already int
  "SIM102", # nested if — read fine collapsed and not
  "SIM103", # return condition directly — explicit if/else reads clearer in plan() flow
  "SIM112", # uppercase env var — many real env vars are lowercase by convention
  "SIM115", # open without with — sweep across legacy file handlers in a dedicated PR
  "SIM300", # yoda comparison — minor stylistic
  # ── Bandit (S) findings that are intentional or unsafe to flag ──
  "S104",   # bind to 0.0.0.0 — daemon explicit listen-all is by design
  "S105",   # hardcoded password string — false positives on test fixtures
  "S106",   # hardcoded password arg — same as above
  "S108",   # /tmp / hardcoded temp file — used in well-bounded scopes, not user input
  "S113",   # requests without timeout — addressed per-call; many helpers wrap requests
  "S310",   # urlopen with arbitrary scheme — daemon-only, schemes are validated
  "S311",   # use random for crypto — no crypto context in this codebase
  "S314",   # XML parsing with risky parser — tags read trusted media metadata
  "S324",   # md5/sha1 use — both used only for non-crypto content keys
  "S603",   # subprocess argv — already ignored above; pinned here for clarity
  "S607",   # partial path executable — pinned above
  "S608",   # SQL injection — false positives on parametrised string builders in db.py
  "PLW1510",# subprocess.run without explicit check= — daemon checks returncode itself
  "RET501", # explicit None return — kept where the function is typed Optional[X]
  "RET502", # implicit None return on def with -> X | None — readable
  "RET503", # missing explicit return on annotated function — readable
  "B007",   # already ignored above; kept for clarity
  "B023",   # function captures loop variable — narrow, audited in yaml_merge
  "LOG015", # logger.exception outside except — used in audit logging
  # ── Remaining PTH bulk (pathlib migration deferred to a dedicated PR) ──
  "PTH101", "PTH104", "PTH105", "PTH106", "PTH108", "PTH202", "PTH204", "PTH206",
  # ── Tail of misc patterns ──
  "S602",   # subprocess shell=True — narrow, audited (mise task scripts)
  "S606",   # os.execv — graceful_restart uses this intentionally
  "S103",   # 0o755 chmod — mise deploy helper makes scripts executable
  "B006",   # mutable default arg — legacy API surface; sweep separately
  "B011",   # assert False — codec dimension helper sentinel
  "SIM110", # any()/all() rewrite — clearer as for-loop here
  "SIM211", # negated bool() — readable
  "SIM222", # boolean simplification — readable
  "UP035",  # typing.* → collections.abc.* — broad mechanical bump
  "B905",   # zip without strict — legacy code; sweep separately
  "PLW0108","RUF003","RUF007","RUF043",  # tail violations (PTH211 omitted — older ruff doesn't recognise it)
  "S112",   # try-except-continue — bounded best-effort
  "S506",   # yaml.load() — only used on internal config files
]

[tool.bandit]
# Bandit configuration for `mise run test:lint`. Scope is narrowed to the
# daemon HTTP surface, trigger entry scripts, and top-level CLI entrypoints
# — the converter library is too noisy (legacy subprocess wrappers) for an
# initial pass and is swept under ruff's S* rules instead.
exclude_dirs = ["tests", "venv", "build", ".mise"]
# Most subprocess invocations are with hardcoded argv and trusted input.
# Per-call `# nosec` comments document any case where we want to keep a
# Bandit warning suppressed with rationale.
skips = [
  "B101",  # asserts — pytest tests + a few internal invariants
  "B104",  # bind all interfaces (0.0.0.0) — daemon listens on configurable host
  "B110",  # try/except/pass — used as bounded best-effort cleanup paths
  "B112",  # try/except/continue — bounded best-effort in scanner loops
  "B404",  # subprocess module — daemon is subprocess-based by design
  "B603",  # subprocess without shell — argv hardcoded
  "B606",  # process without shell — os.execv for daemon graceful_restart
  "B607",  # partial executable path — `ffmpeg` resolved at runtime
  "B608",  # SQL injection — parametrised string builders verified in db.py
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "smoke: end-to-end transcode tests requiring ffmpeg and fixture media (deselect with '-m not smoke')",
]
